# meilisearch-lambda-wrapper

./: .commitlintrc.json  .gitignore  .releaserc.json  .rustfmt.toml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: automatic-version-sync.yml  ci.yml  deploy.yml  release-binary.yml  update-deps-cargo.yml  update-deps-github-actions.yml
docs/: usage.md
docs/terraform_example/: README.md  api_gateway_rest.tf  backend.tf  data.tf  ecr.tf  efs.tf  lambda_api_function.tf  lambda_api_logging.tf  lambda_api_role.tf  locals.tf  outputs.tf  provider.tf  sns_metric_alert_topic.tf  terraform.tfvars  variables.tf
infrastructure/stress_tests/: stress-test.js
infrastructure/sync_versions/: Cargo.toml  cli.py  get_latest_meilisearch_version.py  test_integration_cli.py
infrastructure/sync_versions/src/: main.rs
infrastructure/sync_versions/src/handlers/: get_latest_meilisearch_version.rs  mod.rs
infrastructure/sync_versions/tests/: get_latest_meilisearch_version.rs
wrapper/: Cargo.toml  app.py  config.py  logging_config.py  meilisearch.py  proxy.py
wrapper/src/: config.rs  main.rs  meilisearch.rs  proxy.rs
wrapper/test/: Dockerfile  docker-compose.yml  integration_test.py
wrapper/tests/: Dockerfile  docker-compose.yml  integration_test.rs
wrapper/tests/common/: mod.rs
