[package]
name = "wrapper"
version = "0.1.0"
edition = "2024"
publish = false

[lints.clippy]
implicit_return = "deny"
needless_return = "allow"
absolute_paths = "deny"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
