[package]
name = "wrapper"
edition = "2024"
publish = false

[lints.clippy]
implicit_return = "deny"
needless_return = "allow"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
bytes = "1.11.1"

[features]
integration = []

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
