[package]
name = "sync_versions"
version = "0.1.0"
edition = "2024"
publish = false

[lints.clippy]
implicit_return = "deny"
needless_return = "allow"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
